--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,24 @@
 
     <!--我的-->
     <string name="settings">Settings</string>
+    <string name="cancle">Cancle</string>
+    <string name="done">Done</string>
+    <string name="preview">Preview</string>
+    <string name="edit">Edit</string>
+    <string name="my_photo">My photo</string>
+    <string name="mine_notice_1">Add up to 4 photos</string>
+    <string name="name">Name</string>
+    <string name="age">Age</string>
+    <string name="school">School</string>
+    <string name="job_time">Job Time</string>
+    <string name="drink">Drink</string>
+    <string name="profile_tag">Profile Tag</string>
+    <string name="mine_notice_2">Select a tag to add to your profile</string>
+    <string name="about_me">About me</string>
+    <string name="categories_into">Event categories I’m into</string>
+    <string name="mine_notice_3">What types of events are you into? Choose a minimum of 3 categories</string>
+    <string name="buck_list">My event bucket list </string>
+    <string name="mine_notice_4">What are you dream events you’d like to attend?</string>
+
 
 </resources>
