--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="permissions_sdcard">无法读取内存卡！</string>
     <string name="permissions_camera">无法使用相机！</string>
     <string name="permissions_audio">无法录制音频！</string>
+    <string name="text_null">-----</string>
 
     <!--主页-->
     <string name="for_you">For You</string>
@@ -43,6 +44,16 @@
     <string name="what_new">What\'s New</string>
     <string name="help_center">Help Center</string>
     <string name="log_out">Log Out</string>
+
+    <!--Preference-->
+    <string name="preference_notice_1">To edit, just select choice below</string>
+    <string name="preference_notice_2">FIll in the below to help us better match you to new buddies</string>
+    <string name="pronouns">Pronouns</string>
+    <string name="distance">Distance</string>
+    <!--Age-->
+    <string name="age_notice_1">Select an age range</string>
+    <string name="age_notice_2">Buddies in this range will show up on your \nsearches</string>
+    <string name="age_range">%s - %s years old</string>
 
 
 
