--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,17 @@
     <string name="age_notice_1">Select an age range</string>
     <string name="age_notice_2">Buddies in this range will show up on your \nsearches</string>
     <string name="age_range">%s - %s years old</string>
-
+    <!--Pronouns-->
+    <string name="pronouns_notice_1">Attend events with</string>
+    <string name="pronouns_notice_2">Select all pronouns that match your vibe</string>
+    <string name="he_him">He/Him</string>
+    <string name="she_her">She/Her</string>
+    <string name="they_them">They/Them</string>
+    <string name="open_to_all">Open to all</string>
+    <!--Distance-->
+    <string name="distance_notice_1">Set distance preference</string>
+    <string name="distance_notice_2">Select distance … interested</string>
+    <string name="distance_range">%s Miles</string>
 
 
 </resources>
