--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,6 +135,9 @@
     <!--help-->
     <string name="leave_group">Leave Group</string>
     <string name="add_to_calendar">Add to calendar</string>
+    <string name="resend_code"><u>Resend Code.</u></string>
+    <string name="privacy_policy"><u>Privacy Policy</u></string>
+    <string name="terms_of_service"><u>Terms of Service</u></string>
 
 
 </resources>
