--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,6 +142,7 @@
     <string name="resend_code"><u>Resend Code.</u></string>
     <string name="privacy_policy"><u>Privacy Policy</u></string>
     <string name="terms_of_service"><u>Terms of Service</u></string>
+    <string name="i_don_t_have_a_code"><u>I don\'t have a code</u></string>
 
 
 </resources>
