--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,6 +93,7 @@
     <string name="my_school_name_error">Please enter the school Name</string>
     <string name="my_occupation_error">Please enter the occupation</string>
     <string name="my_drink_of_choice_error">Please enter the My drink</string>
+    <string name="profile_update_success">Update Success</string>
 
     <!--Preference-->
     <string name="preference_notice_1">To edit, just select choice below</string>
